examples/errors/function_function_collision.aaa
fn foo {
    nop
}

fn foo {
    nop
}
